--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "framer-motion": "^11.3.31",
     "html2canvas": "^1.4.1",
     "iconsax-react": "^0.0.8",
-    "next": "^13.5.2",
+    "next": "13.5.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal-sheet": "^3.1.0",
